[package]
name = "xor_linked_list"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { version = "1.11.0", optional = true }


[lib]
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
parallel = ["dep:rayon"]
parallel_sized = ["parallel"]


[[bench]]
name = "parallel_benchmark"
harness = false
required-features = ["parallel"]
